# crud-rust

./: .env_dev  Cargo.toml
database/: dbs.sqlite
frontend/: index.html  login.html  register.html  style.css
rust/: .env_dev  Cargo.toml
rust/src/: app_config.rs  db.rs  lib.rs  main.rs  model.rs  password.rs
src/: app_config.rs  database.rs  env_config.rs  lib.rs  main.rs  model.rs
