[package]
name = "crud-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6.6"
actix-governor = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.31"
tokio = { version = "1.42.0", features = ["full"] }
mongodb = "3.1.1"
ring = "0.17.8"
sha2 = "0.10.8"
